add multiple gpg key url usage to Client Configuration Guide (#2120)
* add multiple gpg key url usage to Client Configuration Guide
* Update modules/client-configuration/pages/snippets/trust_gpg.adoc
Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/client-configuration/pages/snippets/trust_gpg.adoc
+++ b/modules/client-configuration/pages/snippets/trust_gpg.adoc
@@ -9,8 +9,7 @@ However, you cannot install new client tool packages or update them until the ke
 Salt clients now use GPG key information entered for a software channel to manage the trusted keys.
 When a software channel with GPG key information is assigned to a client, the key is trusted as soon as the channel is refreshed or the first package gets installed from this channel.
 
-// The meaning of the following sentence is not clear
-The GPG key URL which is set of a software channel must exist.
+The GPG key URL parameter in the software channel page can contain multiple key URLs separated by "whitespace".
 In case it is a file URL, the GPG key file must be deployed on the client before the software channel is used.
 
 The GPG keys for the Client Tools Channels of {redhat} based clients are deployed on the client into [path]``/etc/pki/rpm-gpg/`` and can be referenced with file URLs.
