installation and setup of containerized server

--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -42,6 +42,8 @@ ifeval::[{suma-content} == true]
 endif::[]
 
 **** xref:install-pubcloud.adoc[Install on Public Cloud]
+**** xref:server-container-installation.adoc[Install Containerized Server]
+
 *** {productname} Proxy
 
 ifeval::[{suma-content} == true]
@@ -69,6 +71,7 @@ ifeval::[{uyuni-content} == true]
 **** xref:uyuni-server-setup.adoc[Uyuni Server Setup]
 endif::[]
 
+**** xref:server-container-setup.adoc[Containerized Server Setup]
 **** xref:setup-wizard.adoc[Setup Wizard]
 **** xref:webui-setup.adoc[Web Interface Setup]
 **** xref:pubcloud-setup.adoc[Public Cloud Setup]
