--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -197,6 +197,7 @@ endif::[]
 *** xref:cli-sync.adoc[Synchronization CLI Tools]
 *** xref:cli-bootstrap.adoc[Bootstrapping CLI Tools]
 *** xref:cli-smdba.adoc[Database CLI Tools]
+*** xref:cli-container.adoc[Container CLI Tools]
 
 
 ifdef::backend-pdf[]
