--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -38,7 +38,7 @@ To boot from a PXE server, you need at least 2{nbsp}GB.
 Before you begin, you need to install the Yomi formula, which is available as a package in {productname}.
 
 The ``yomi-formula`` package contains the Salt states and modules that describe the Yomi state, and the formulas with forms to create the pillar.
-It also contains documentation about the different sections of the pillar, and some examples about how to parameterize installations based on openSUSE or SLE.
+It also contains documentation about the different sections of the pillar, and some examples about how to parameterize installations based on {opensuse} or {sle}.
 
 The formula package performs these actions:
 
