--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -186,7 +186,7 @@ The pillar includes parameters that the Yomi state requires during the installat
 
 The pillar is defined using the formulas with forms.
 In this example, we prepare the pillar for a minimal openSUSE Tumbleweed installation.
-You can find examples for SLE in the example directory [path]``/usr/share/yomi/pillar/``.
+You can find examples for {sle} in the example directory [path]``/usr/share/yomi/pillar/``.
 
 To begin, boot the client that you want to provision using the Yomi PXE boot image, using the Cobbler procedures described earlier in this section.
 
