Documentation for the new Recurring Actions feature

--- a/modules/administration/pages/actions.adoc
+++ b/modules/administration/pages/actions.adoc
@@ -3,7 +3,7 @@
 
 You can manage actions on your clients in a number of different ways.
 
-For Salt clients, you can schedule automated recurring actions to apply the highstate to clients on a specified schedule.
+For Salt clients, you can schedule automated recurring actions to apply the highstate or an arbitrary set of custom states to clients on a specified schedule.
 You can apply recurring actions to individual clients, to all clients in a system group, or to an entire organization.
 
 On both Salt and traditional clients, you can set actions to be performed in a particular order by creating action chains.
@@ -16,14 +16,22 @@ Remote commands allows you to issue commands to individual Salt clients, or to a
 
 == Recurring Actions
 
-You can apply recurring actions on individual Salt clients, or to all clients in an organization.
+You can apply recurring actions on individual Salt clients, to a system group, or to all clients in an organization.
+
+Currently, {productname} supports the following action types as recurring actions:
+
+- [parameter]``Highstate:`` Execute the highstate.
+- [parameter]``Custom state:`` Execute a set of custom states. A custom state can be either an internal state provided by {productname}, or a configuration channel created by a user.
+
+For more information about configuration channels, see xref:client-configuration:configuration-management.adoc[].
 
 
 
 .Procedure: Creating a New Recurring Action
-. To apply a recurring action to an individual client, navigate to [guimenu]``Systems``, click the client to configure schedules for, and navigate to the menu:States[Recurring States] tab.
-. To apply a recurring action to a system group, navigate to menu:Systems[System Groups], select the group to configure schedules for, and navigate to menu:States[Recurring States] tab.
+. To apply a recurring action to an individual client, navigate to [guimenu]``Systems``, click the client to configure schedules for, and navigate to the menu:[Recurring Actions] tab.
+. To apply a recurring action to a system group, navigate to menu:Systems[System Groups], select the group to configure schedules for, and navigate to menu:[Recurring Actions] tab.
 . Click btn:[Create].
+. Select an action type from the [guimenu]``Action Type`` dropdown.
 . Type a name for the new schedule.
 . Choose the frequency of the recurring action:
 +
@@ -40,14 +48,16 @@ You can apply recurring actions on individual Salt clients, or to all clients in
 0 15 2 ? * 7
 ----
 . OPTIONAL: Toggle the [guimenu]``Test mode`` switch on to run the schedule in test mode.
-. Click btn:[Create Schedule] to save, and see the complete list of existing schedules.
+. For actions of type [parameter]``Custom state``, select the states from the list of available states and click btn:[Save Changes]. This will only save the current state selection and not the schedule.
+. In the next pane, drag and drop the selected states to put them in the execution order and click btn:[Confirm].
+. Finally, click btn:[Create Schedule] to save, and see the complete list of existing schedules.
 
 
 Organization Administrators can set and edit recurring actions for all clients in the organization.
-Navigate to menu:Home[My Organization > Recurring States] to see all recurring actions that apply to the entire organization.
+Navigate to menu:Home[My Organization > Recurring Actions] to see all recurring actions that apply to the entire organization.
 
 {productname} Administrators can set and edit recurring actions for all clients in all organizations.
-Navigate to menu:Admin[Organizations], select the organization to manage, and navigate to the menu:States[Recurring States] tab.
+Navigate to menu:Admin[Organizations], select the organization to manage, and navigate to the menu:States[Recurring Actions] tab.
 
 [NOTE]
 ====
