--- a/modules/reference/nav-reference-guide.adoc
+++ b/modules/reference/nav-reference-guide.adoc
@@ -47,6 +47,7 @@ endif::[]
 ***** xref:systems/system-details/sd-states.adoc[States]
 ***** xref:systems/system-details/sd-formulas.adoc[Formulas]
 ***** xref:systems/system-details/sd-ansible.adoc[Ansible]
+***** xref:systems/system-details/sd-recurring-actions.adoc[Recurring Actions]
 ***** xref:systems/system-details/sd-events.adoc[Events]
 **** xref:systems/systems-list.adoc[Systems List]
 **** xref:systems/system-groups.adoc[System Groups]
