backport 4.3: remove opensuse microos (#2130)
* remove opensuse microos
https://github.com/SUSE/spacewalk/issues/20162
https://github.com/uyuni-project/uyuni-docs/pull/2088
* remove more microos references (per feedback)
* Update modules/specialized-guides/pages/salt/salt-yomi.adoc
Co-authored-by: Julio González Gil <juliogonzalez@users.noreply.github.com>

--- a/modules/specialized-guides/pages/salt/salt-yomi.adoc
+++ b/modules/specialized-guides/pages/salt/salt-yomi.adoc
@@ -38,7 +38,7 @@ To boot from a PXE server, you need at least 2{nbsp}GB.
 Before you begin, you need to install the Yomi formula, which is available as a package in {productname}.
 
 The ``yomi-formula`` package contains the Salt states and modules that describe the Yomi state, and the formulas with forms to create the pillar.
-It also contains documentation about the different sections of the pillar, and some examples about how to parameterize installations based on openSUSE, MicroOS, or SLE.
+It also contains documentation about the different sections of the pillar, and some examples about how to parameterize installations based on {opensuse} or {sle}.
 
 The formula package performs these actions:
 
@@ -186,7 +186,7 @@ The pillar includes parameters that the Yomi state requires during the installat
 
 The pillar is defined using the formulas with forms.
 In this example, we prepare the pillar for a minimal openSUSE Tumbleweed installation.
-You can find examples for MicroOS or SLES in the example directory [path]``/usr/share/yomi/pillar/``.
+You can find examples for {sle} in the example directory [path]``/usr/share/yomi/pillar/``.
 
 To begin, boot the client that you want to provision using the Yomi PXE boot image, using the Cobbler procedures described earlier in this section.
 
