change cleanup Salt Client description

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -30,7 +30,7 @@ For more information about the system set manager, see xref:client-configuration
 ====
 It is not possible to automatically clean up a traditional client after deleting it.
 You have to take care of this yourself.
-Furthermore, cleaning up a Salt client does not remove Salt itself.
+Furthermore, cleaning up a Salt client does only disable salt and stop the service if possible. It does not uninstall the package.
 ====
 
 [NOTE]
