Update: enable modifying recurring actions from the 'Schedule' page

--- a/modules/reference/pages/schedule/recurring-actions.adoc
+++ b/modules/reference/pages/schedule/recurring-actions.adoc
@@ -3,17 +3,37 @@
 
 The menu:Schedule[Recurring Actions] section shows all recurring actions that you have permissions for.
 
-[NOTE]
-====
-The recurring actions list on this page is a read-only table.
-To modify a schedule, you can follow the links in the [guimenu]``Target Name`` column and list the schedules of an individual target.
-====
 
-Recurring Action Details::
+
+== Recurring Action Details
 
 View the details about an action from the action list.
 In the [guimenu]``Actions`` column, click the btn:[Details] icon for the action you are interested in.
 
 
-For more information about recurring actions, see xref:administration:actions.adoc[].
 
+== Disabling Recurring Actions
+
+Disabling an action stops the action recurring, but does not delete it.
+To disable a recurring action toggle the [guimenu]``Active`` switch off.
+Enable them again by toggling the [guimenu]``Active`` switch on.
+Disabled recurring actions remain in the list, but are not executed.
+
+
+
+== Editing Recurring Actions
+
+In the [guimenu]``Actions`` column, click the btn:[Edit] icon for the action you want to change.
+On the [guimenu]``Schedule Recurring Action`` page, the existing properties are pre-filled.
+Make your changes, and click btn:[Update Schedule].
+
+
+
+== Deleting Recurring Actions
+
+Deleting an action permanently removes it.
+To start using the action again, you will need to create a new action.
+In the [guimenu]``Actions`` column, click the btn:[Delete] icon for the action you want to delete, and confirm the deletion.
+
+
+For more information about recurring actions, see xref:administration:actions.adoc[].
