Documentation for the new Recurring Actions feature (#2192)
* Documentation for the new Recurring Actions feature

* Update: enable modifying recurring actions from the 'Schedule' page

--- a/modules/reference/pages/schedule/recurring-actions.adoc
+++ b/modules/reference/pages/schedule/recurring-actions.adoc
@@ -3,13 +3,16 @@
 
 The menu:Schedule[Recurring Actions] section shows all recurring actions that you have permissions for.
 
-Recurring Action Details::
+
+
+== Recurring Action Details
 
 View the details about an action from the action list.
 In the [guimenu]``Actions`` column, click the btn:[Details] icon for the action you are interested in.
 
 
-Disabling Recurring Actions::
+
+== Disabling Recurring Actions
 
 Disabling an action stops the action recurring, but does not delete it.
 To disable a recurring action toggle the [guimenu]``Active`` switch off.
@@ -17,15 +20,16 @@ Enable them again by toggling the [guimenu]``Active`` switch on.
 Disabled recurring actions remain in the list, but are not executed.
 
 
-Edit Recurring Actions::
 
-Edit an existing recurring action.
+== Editing Recurring Actions
+
 In the [guimenu]``Actions`` column, click the btn:[Edit] icon for the action you want to change.
-On the [guimenu]``Schedule Recurring Highstate`` page, the existing properties are pre-filled.
+On the [guimenu]``Schedule Recurring Action`` page, the existing properties are pre-filled.
 Make your changes, and click btn:[Update Schedule].
 
 
-Delete Recurring Actions::
+
+== Deleting Recurring Actions
 
 Deleting an action permanently removes it.
 To start using the action again, you will need to create a new action.
