update for sle micro 5.4, sles 15 sp5, and leap 15.5

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -6,9 +6,10 @@ For example, you can migrate {sles}{nbsp}15{nbsp}SP1 to {sles}{nbsp}15{nbsp}SP2.
 
 You can also migrate openSUSE Leap to a later minor version or to the corresponding {sles} SP level, for example:
 
-* openSUSE Leap 15.1 to 15.2, or
-* openSUSE Leap 15.1 to {sles} 15 SP1, or
+* openSUSE Leap 15.1 to 15.2
+* openSUSE Leap 15.1 to {sles} 15 SP1
 * openSUSE Leap 15.4 to {sles} 15 SP4
+* openSUSE Leap 15.5 to {sles} 15 SP5
 
 [WARNING]
 ====
