--- a/modules/client-configuration/pages/clients-sle.adoc
+++ b/modules/client-configuration/pages/clients-sle.adoc
@@ -7,6 +7,7 @@ This section contains information about registering clients running these {sle} 
 * {sles}{nbsp}15{nbsp}SP2
 * {sles}{nbsp}15{nbsp}SP3
 * {sles}{nbsp}15{nbsp}SP4
+* {sles}{nbsp}15{nbsp}SP5
 
 ////
 * {sles}{nbsp}12{nbsp}SP5
@@ -57,6 +58,9 @@ The products you need for this procedure are:
 
 | {sles} 15 SP4
 | SUSE Linux Enterprise Server 15 SP4 x86_64
+
+| {sles} 15 SP5
+| SUSE Linux Enterprise Server 15 SP5 x86_64
 |===
 
 
@@ -87,6 +91,9 @@ The channels you need for this procedure are:
 
 | {sles} 15 SP4
 | sle-product-sles15-sp4-pool-x86_64
+
+| {sles} 15 SP5
+| sle-product-sles15-sp5-pool-x86_64
 |===
 
 To find channel names of older products, at the command prompt on the {productname} Server, as root, use the [command]``mgr-sync`` command:
@@ -132,6 +139,9 @@ To add the client tools, add these channels from the command prompt:
 
 | {sles} 15 SP4
 | sles15-sp4-uyuni-client
+
+| {sles} 15 SP5
+| sles15-sp5-uyuni-client
 |===
 
 
