--- a/modules/installation-and-upgrade/pages/connect-payg.adoc
+++ b/modules/installation-and-upgrade/pages/connect-payg.adoc
@@ -71,7 +71,7 @@ If the invalid data are entered at any point, the newly created instance is show
 As soon as the authentication data is available on the server, the list of available products is updated.
 
 Available products are all versions of the same product family and architecture as the one installed in the {payg} instance. 
-For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2, {slsa}{nbsp}15 SP3 and {slsa}{nbsp}15 SP4 are automatically shown in [guimenu]``Admin > Setup Wizard > Products``. 
+For example, if the instance has the {slsa}{nbsp}15 SP1 product installed, {slsa}{nbsp}15 SP2, {slsa}{nbsp}15 SP3, {slsa}{nbsp}15 SP4 and {slsa}{nbsp}15 SP5 are automatically shown in [guimenu]``Admin > Setup Wizard > Products``. 
 
 Once the products are shown as available, the user can add a product to {productname} by selecting the checkbox next to the product name and clicking btn:[Add product].
 
