add new system-profile-refresh-default taskomatic job

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -118,5 +118,10 @@ Cleans up stale Web interface sessions, typically data that is temporarily store
 menu:ssh-push-default:[]::
 Prompts clients to check in with {productname} via SSH if they are configured with a `SSH Push` contact method.
 
+menu:system-profile-refresh-default:[]::
+Run a Hardware refresh on all systems. This happens only monthly and can increased load on the {productname} Server.
+The job uses xref:specialized-guides:salt/salt-rate-limiting.adoc[Salt Rate Limiting].
+For tuning the batch size, see xref:specialized-guides:large-deployments/tuning.adoc#java-salt-batch-size[].
+
 menu:token-cleanup-default:[]::
 Deletes expired repository tokens that are used by Salt clients to download packages and metadata.
