--- a/modules/client-configuration/pages/clients-opensuseleap.adoc
+++ b/modules/client-configuration/pages/clients-opensuseleap.adoc
@@ -43,6 +43,9 @@ ifeval::[{suma-content} == true]
 | {opensuse} Leap 15.4
 | openSUSE Leap 15.4 x86_64
 
+| {opensuse} Leap 15.5
+| openSUSE Leap 15.5 x86_64
+
 |===
 
 include::snippets/addchannels_vendor_webui.adoc[]
@@ -60,6 +63,7 @@ The channels you need for this procedure are:
 | {opensuse} Leap 15.2 | opensuse-leap-15.2-pool
 | {opensuse} Leap 15.3 | opensuse-leap-15.3-pool
 | {opensuse} Leap 15.4 | opensuse-leap-15.4-pool
+| {opensuse} Leap 15.5 | opensuse-leap-15.5-pool
 
 |===
 
