Add support for SLE Micro 5.4, SLES 15 SP5, and Leap 15.5 (#2195)
* update for sle micro 5.4, sles 15 sp5, and leap 15.5

* Update retail-uyuni-branchserver.adoc

* Update clients-opensuseleap.adoc

--- a/modules/client-configuration/pages/client-upgrades-product-migration.adoc
+++ b/modules/client-configuration/pages/client-upgrades-product-migration.adoc
@@ -10,8 +10,8 @@ For more information about major upgrades, see xref:client-configuration:client-
 
 You can also migrate openSUSE Leap to a later minor version or to the corresponding {sles} SP level, for example:
 
-* openSUSE Leap 15.1 to 15.2, or
-* openSUSE Leap 15.1 to {sles} 15 SP1, or
+* openSUSE Leap 15.1 to 15.2
+* openSUSE Leap 15.1 to {sles} 15 SP1
 * openSUSE Leap 15.5 to {sles} 15 SP5
 
 
