--- a/modules/installation-and-upgrade/pages/server-y.adoc
+++ b/modules/installation-and-upgrade/pages/server-y.adoc
@@ -8,7 +8,7 @@ It is an in-place upgrade.
 
 Example: [literal]``4.2.x`` → [literal]``4.3.0`` or [literal]``4.1.x`` → [literal]``4.3.0`
 
-The upgrade from version 4.1 to 4.3 will also upgrade the base OS from SLES 15 SP2 to SLES 15 SP5​, and the PostgreSQL database from version{nbsp}12 to 14 with an additional step.
+The upgrade from version 4.1 to 4.3 will also upgrade the base OS from {sles} 15 SP2 to {sles} 15 SP4, and the PostgreSQL database from version{nbsp}12 to 14 with an additional step.
 For more information about the database upgrade, see xref:installation-and-upgrade:db-migration-xy.adoc[].
 
 [IMPORTANT]
