Backport42 - change cleanup Salt Client description.

--- a/modules/client-configuration/pages/delete-clients.adoc
+++ b/modules/client-configuration/pages/delete-clients.adoc
@@ -16,3 +16,10 @@ This procedure works for both traditional and Salt clients.
 
 You can also delete multiple clients using the system set manager.
 For more information about the system set manager, see xref:client-configuration:system-set-manager.adoc[].
+
+[IMPORTANT]
+====
+It is not possible to automatically clean up a traditional client after deleting it.
+You have to take care of this yourself.
+Furthermore, cleaning up a Salt client does only disable salt and stop the service if possible. It does not uninstall the package.
+====
