--- a/modules/client-configuration/nav-client-configuration-guide.adoc
+++ b/modules/client-configuration/nav-client-configuration-guide.adoc
@@ -14,7 +14,7 @@ endif::[]
 *** xref:supported-features-sles.adoc[SLES Supported Features]
 // SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{suma-content} == true]
-*** xref:supported-features-es.adoc[SLES-ES Supported Features]
+*** xref:supported-features-es.adoc[SUSE Liberty Linux Supported Features]
 endif::[]
 *** xref:supported-features-sle-micro.adoc[SLE Micro Supported Features]
 // openSUSE Leap Micro not available at SUSE Manager for now
@@ -58,7 +58,7 @@ endif::[]
 **** xref:clients-slemicro.adoc[SLE Micro Clients]
 // SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{suma-content} == true]
-**** xref:clients-sleses.adoc[Expanded Support Clients]
+**** xref:clients-sleses.adoc[SUSE Liberty Linux Support Clients]
 endif::[]
 *** xref:registration-overview-opensuse.adoc[openSUSE Client Registration]
 **** xref:clients-opensuseleap.adoc[openSUSE Leap Clients]
