hints about creating bootstrap repo for SUSE Liberty Linux (bsc#1207809)

--- a/modules/client-configuration/pages/clients-sleses.adoc
+++ b/modules/client-configuration/pages/clients-sleses.adoc
@@ -40,6 +40,8 @@ endif::[]
 Traditional clients are not available on {sll}{nbsp}8 or 9.
 {sll}{nbsp}8 and 9 clients are only supported as Salt clients.
 
+For more information, see xref:client-configuration:contact-methods-saltbundle.adoc#contact-methods-saltbundle-using[].
+
 
 
 == Add Software Channels
