--- a/modules/client-configuration/pages/contact-methods-saltbundle.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltbundle.adoc
@@ -28,6 +28,7 @@ If you switch, the [package]``salt-minion`` package and its dependencies will st
 
 
 
+[[contact-methods-saltbundle-using]]
 === Using the Salt Bundle with the Salt Minion
 
 The Salt Bundle can be used with the Salt Minion managed by the Salt Master other than {productname} Server at the same time.
