--- a/modules/administration/pages/custom-channels.adoc
+++ b/modules/administration/pages/custom-channels.adoc
@@ -78,7 +78,7 @@ endif::[]
 // SUSE Liberty Linux not available at Uyuni for now
 ifeval::[{uyuni-content} == true]
 If you are registering traditional {rhel}{nbsp}7 clients you might notice errors with unsigned packages.
-endif:[]
+endif::[]
 
 For more information, see xref:administration:troubleshooting/tshoot-registertradrhel.adoc[].
 ====
