--- a/modules/client-configuration/pages/clients-rh-cdn.adoc
+++ b/modules/client-configuration/pages/clients-rh-cdn.adoc
@@ -458,6 +458,16 @@ Because a software channel cannot be used when the GPG key is not trusted, the d
 
 For more information about GPG keys, see xref:client-configuration:gpg-keys.adoc[].
 
+[NOTE]
+====
+To check the [guimenu]``Enable GPG Check`` field for the Red Hat Custom Channels, populate the [guimenu]``GPG Key URL`` field using the file URL pointing to the GPG key stored in the directory [systemitem]``/etc/pki/rpm-gpg`` of the Red Hat minion.
+
+Example:
+[systemitem]``file:///etc/pki/rpm-gpg/RPM-GPG-KEY-redhat-release``
+
+For the complete list of the Red Hat Product Signing keys, see https://access.redhat.com/security/team/key.
+====
+
 
 == Register Clients
 
