--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -19,8 +19,8 @@ Clicking the start time links takes you back to the menu:Schedule Name[Basic Sch
 
 For example, the following predefined task bunches are scheduled by default and can be configured:
 
-menu:auto-errata-default:[]:
-Schedule auto errata updates as necessary
+menu:auto-errata-default:[]::
+Schedule auto errata updates as necessary.
 
 menu:channel-repodata-default:[]::
 (Re)generates repository metadata files.
