--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -108,7 +108,7 @@ menu:minion-checkin-default:[]::
 Perform a regular check-in on minions.
 
 menu:notifications-cleanup-default:[]::
-Cleanup expired notification messages
+Cleanup expired notification messages.
 
 menu:package-cleanup-default:[]::
 Deletes stale package files from the file system.
