Update API script examples to python3

--- a/modules/administration/pages/openscap.adoc
+++ b/modules/administration/pages/openscap.adoc
@@ -206,8 +206,8 @@ If the content file includes invalid arguments, the test fails.
   For example:
 +
 ----
-#!/usr/bin/python
-client = xmlrpclib.Server('https://server.example.com/rpc/api')
+#!/usr/bin/python3
+client = xmlrpc.client.ServerProxy('https://server.example.com/rpc/api')
 key = client.auth.login('username', 'password')
 client.system.scap.scheduleXccdfScan(key, <1000010001>,
     '<path_to_xccdf_file.xml>',
