--- a/modules/specialized-guides/pages/large-deployments/hub-auth.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-auth.adoc
@@ -47,14 +47,14 @@ In this case, the response will be a single value and not a map, in the same way
 .Example Python Script for Manual Authentication:
 
 ----
-#!/usr/bin/python
-import xmlrpclib
+#!/usr/bin/python3
+import xmlrpc.client
 
 HUB_XMLRPC_API_URL = "<HUB_XMLRPC_API_URL>"
 HUB_USERNAME = "<USERNAME>"
 HUB_PASSWORD = "<PASSWORD>"
 
-client = xmlrpclib.Server(HUB_XMLRPC_API_URL, verbose=0)
+client = xmlrpc.client.ServerProxy(HUB_XMLRPC_API_URL, verbose=0)
 
 hubSessionKey = client.hub.login(HUB_USERNAME, HUB_PASSWORD)
 
@@ -76,9 +76,9 @@ successfulResponses = systemsPerServer["Successful"]["Responses"]
 failedResponses = systemsPerServer["Failed"]["Responses"]
 
 for system in successfulResponses:
-  print (system)
+  print(system)
 
-#logout
+# Log out
 client.hub.logout(hubSessionKey)
 ----
 
@@ -113,33 +113,32 @@ A typical workflow for relay authentication is:
 .Example Python Script for Relay Authentication:
 
 ----
-#!/usr/bin/python
-import xmlrpclib
-
+#!/usr/bin/python3
+import xmlrpc.client
 
 HUB_XMLRPC_API_URL = "<HUB_XMLRPC_API_URL>"
 HUB_USERNAME = "<USERNAME>"
 HUB_PASSWORD = "<PASSWORD>"
 
-client = xmlrpclib.Server(HUB_XMLRPC_API_URL, verbose=0)
+client = xmlrpc.client.ServerProxy(HUB_XMLRPC_API_URL, verbose=0)
 
 hubSessionKey = client.hub.loginWithAuthRelayMode(HUB_USERNAME, HUB_PASSWORD)
 
-#Get the server IDs
+# Get the server IDs
 serverIds = client.hub.listServerIds(hubSessionKey)
 
-#authenticate those servers(same credentials will be used as of hub to authenticate)
+# Authenticate those servers(same credentials will be used as of hub to authenticate)
 client.hub.attachToServers(hubSessionKey, serverIds)
 
-# perform the needed operation
+# Perform the needed operation
 systemsPerServer = client.multicast.system.list_systems(hubSessionKey, serverIds)
 successfulResponses = systemsPerServer["Successful"]["Responses"]
 failedResponses = systemsPerServer["Failed"]["Responses"]
 
 for system in successfulResponses:
-  print (system)
+  print(system)
 
-#logout
+# Log out
 client.hub.logout(hubSessionKey)
 ----
 
@@ -170,31 +169,29 @@ A typical workflow for auto-connect authentication is:
 .Example Python Script for Auto-Connect Authentication:
 
 ----
-#!/usr/bin/python
-import xmlrpclib
-
-
+#!/usr/bin/python3
+import xmlrpc.client
 
 HUB_XMLRPC_API_URL = "<HUB_XMLRPC_API_URL>"
 HUB_USERNAME = "<USERNAME>"
 HUB_PASSWORD = "<PASSWORD>"
 
-client = xmlrpclib.Server(HUB_XMLRPC_API_URL, verbose=0)
+client = xmlrpc.client.ServerProxy(HUB_XMLRPC_API_URL, verbose=0)
 
 loginResponse = client.hub.loginWithAutoconnectMode(HUB_USERNAME, HUB_PASSWORD)
 hubSessionKey = loginResponse["SessionKey"]
 
-#Get the server IDs
+# Get the server IDs
 serverIds = client.hub.listServerIds(hubSessionKey)
 
-# perform the needed operation
+# Perform the needed operation
 systemsPerServer = client.multicast.system.list_systems(hubSessionKey, serverIds)
 successfulResponses = systemsPerServer["Successful"]["Responses"]
 failedResponses = systemsPerServer["Failed"]["Responses"]
 
 for system in successfulResponses:
-  print (system)
+  print(system)
 
-#logout
+# Log out
 client.hub.logout(hubSessionKey)
 ----
