New task schedule jobs (#2196)
* add new system-profile-refresh-default taskomatic job

* add missing descriptions of other taskomatic jobs

* update changelog

* Update modules/administration/pages/task-schedules.adoc

* Update modules/administration/pages/task-schedules.adoc

* Update modules/administration/pages/task-schedules.adoc

* Update .changelog

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/administration/pages/task-schedules.adoc
+++ b/modules/administration/pages/task-schedules.adoc
@@ -19,6 +19,9 @@ Clicking the start time links takes you back to the menu:Schedule Name[Basic Sch
 
 For example, the following predefined task bunches are scheduled by default and can be configured:
 
+menu:auto-errata-default:[]::
+Schedule auto errata updates as necessary.
+
 menu:channel-repodata-default:[]::
 (Re)generates repository metadata files.
 
@@ -64,6 +67,9 @@ For more information about patches, see xref:reference:patches/patches-menu.adoc
 menu:errata-queue-default:[]::
 Queues automatic updates (patches) for servers that are configured to receive them.
 
+menu:gatherer-matcher-default:[]::
+Gather virtual host data by running Virtual Host Gatherer configured in Virtual Host Managers.
+After updated data are available the Subscription Matcher job is run.
 
 menu:kickstart-cleanup-default:[]::
 Cleans up stale kickstart session data.
@@ -89,12 +95,20 @@ Synchronizes with SUSE Customer Center (SCC) (``mgr-sync-refresh``).
 By default, all custom channels are also synchronized as part of this task.
 For more information about custom channel synchronization, see xref:administration:custom-channels.adoc#_custom_channel_synchronization[].
 
+menu:minion-action-chain-cleanup-default:[]::
+Cleanup outdated action chain data.
+
 menu:minion-action-cleanup-default:[]::
 Deletes stale client action data from the file system.
 First it tries to complete any possibly unfinished actions by looking up the corresponding results; these results are stored in the Salt job cache.
 An unfinished action can occur if the server has missed the results of the action.
 For successfully completed actions it removes artifacts such as executed script files.
 
+menu:minion-checkin-default:[]::
+Perform a regular check-in on minions.
+
+menu:notifications-cleanup-default:[]::
+Cleanup expired notification messages.
 
 menu:package-cleanup-default:[]::
 Deletes stale package files from the file system.
@@ -118,5 +132,22 @@ Cleans up stale Web interface sessions, typically data that is temporarily store
 menu:ssh-push-default:[]::
 Prompts clients to check in with {productname} via SSH if they are configured with a `SSH Push` contact method.
 
+menu:system-profile-refresh-default:[]::
+Run a Hardware refresh on all systems. This happens only monthly and can increase load on the {productname} Server.
+The job uses xref:specialized-guides:salt/salt-rate-limiting.adoc[Salt Rate Limiting].
+For tuning the batch size, see xref:specialized-guides:large-deployments/tuning.adoc#java-salt-batch-size[].
+
 menu:token-cleanup-default:[]::
 Deletes expired repository tokens that are used by Salt clients to download packages and metadata.
+
+menu:update-payg-default:[]::
+Collect authentication data from configure pay-as-you-go cloud instances.
+
+menu:update-reporting-default:[]::
+Update the local Reporting Database.
+
+menu:update-reporting-hub-default:[]::
+Collect all reporting data from peripheral {productname} Server and update the Hub Reporting Database.
+
+menu:uuid-cleanup-default:[]::
+Cleanup outdated UUID records.
